    end
Some more work needs to be done to translate C++ exceptions to Ruby ones for
the WServer methods
* Added the hello-widgetset example
* Added WTHTTP_CONFIGURATION, RUNDIR and WT_CONFIG_XML top level constants
correponding to the ones in the WConfig.h header
* Don't repeat the code to convert from ARGV to argc/argv and add a utility
function args2argv()

2009-01-16 Richard Dale <richard.j.dale@gmail.com>
* Removed the simplechat example as it only works with the multi-threaded 
version of libwthttp, which can't be used with Wt::Ruby

2009-01-15 Richard Dale <richard.j.dale@gmail.com>
* Allow Ruby Date and Time instances to be passed to the Wt::WDate and 
Boost::Any constructors
* Remove the optimization in the mark function to only traverse the tree of 
children of WObjects which don't have parents and always traverse instead.

2009-01-11 Richard Dale <richard.j.dale@gmail.com>
* Added a wt.rb file that is installed and will pull in either 'wthttp' or the
'wtfcgi' extensions according to the value of the 'WT_ENV' environment variable
* Add '#!/usr/bin/ruby' to the example program sources

2008-12-28 Richard Dale <richard.j.dale@gmail.com>
* Instead of a single 'wt' ruby extension linked against libwthttp, build two
ruby extensions 'wthttp' and 'wtfcgi' linked against the http and fcgi 
connectors respectively. 
* Wt::Ruby programs, such as the examples, could still have require 'wt' 
statements, and they could be set up to actually pull in either the 'wthttp'
or 'wtfcgi' extension according to whether they are to be used in a 
development or production environment. For instance, in wt.rb:

    if ENV['WT_ENV'] == 'production'
      require 'wtfcgi'
    elsif ENV['WT_ENV'] == 'development'
      require 'wthttp'
    end

* Removed redundant copies of the Ext javascript code in the examples

2008-12-26 Richard Dale <richard.j.dale@gmail.com>
* Stateless slots cannot have any arguments, however they can be connected to